seldon-deploy-install/prerequisites-setup/minio/miniovirtualservicekubeflow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: kubeflow
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /minio/
      route:
        - destination:
            host: minio-service
            port:
              number: 9000
